--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Your Page Title</title>
 </head>
 <body>
-  <a href="https://cdn.jsdelivr.net/gh/dwpope/inventaire@main/CubeOnly.usdz" rel="ar">View in AR</a>
+  <a href="https://cdn.jsdelivr.net/gh/dwpope/inventaire@main/AugmentedArtworkCompressed.usdz" rel="ar">View in AR</a>
 </body>
 </html>
